force-app/main/default/objects/LLC_BI__Product_Program__c/LLC_BI__Product_Program__c.object-meta.xml
<CustomObject>
    <label>Product Program</label>
    <nameField>
        <label>Product Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>