force-app/main/default/objects/LLC_BI__Product_Program__c/fields/LLC_BI__Parent_Program__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Parent_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is currently not used because the product program selector feature is not being used. Creates a hierarchy of product programs.</description>
    <label>Parent Program</label>
    <referenceTo>LLC_BI__Product_Program__c</referenceTo>
    <relationshipLabel>Product Programs</relationshipLabel>
    <relationshipName>Product_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>