force-app/main/default/objects/LLC_BI__Product_Program__c/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <description>This field is currently not used because the product program selector feature is not being used. Provides the product reference.</description>
    <label>Product</label>
    <referenceTo>LLC_BI__Product__c</referenceTo>
    <relationshipLabel>Product Programs</relationshipLabel>
    <relationshipName>Product_Programs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>